--- a/shoppingcart/cart.css
+++ b/shoppingcart/cart.css
@@ -1,5 +1,21 @@
 body {
-    background-color: lightslategray;
+    background-image: url(https://www.taomerle.com/wp-content/uploads/2017/12/web-page-background-color-with-html-in.jpg);
+}
+
+body {
+    background-color: rgb(100, 130, 160);
+}
+header {
+    color: whitesmoke;
+}
+nav a {
+    font-family: Arial, Helvetica, sans-serif;
+    font-style: italic;
+    padding: 10px;
+    color: whitesmoke;
+    text-decoration: none;
+    border: 2px dotted;
+    margin: 5px;
 }
 
 table, .order-now-container {
@@ -17,8 +33,8 @@ table, .order-now-container {
     height: 50px;
     width: 200px;
     font-size: 1.25em;
-    background: coral;
-    color: white;
+    background: black;
+    color: whitesmoke;
 }
 
 table {
